# StockHero-App

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/components/: stock_detail.py  stock_screener.py
config/: logger.py
data/database/: db_manager.py  models.py
notebook/: docker.txt
